fixed z-index on mountain

--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -14,6 +14,7 @@
     /* border: 4px solid #422525; */
     margin-left: 10px;
     image-rendering: pixelated;
+    z-index: 20;
 }
 
 /* Resets the standard button styling */
